Fix the spinner not visible when second api call is made. Add check for empty fields before posting data to backend. Update test cases. Add script for debugging test cases in chrome.Update launch.json for VS Code.

--- a/src/components/Spinner/Spinner.css
+++ b/src/components/Spinner/Spinner.css
@@ -1,3 +1,10 @@
+.spinner-container{
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 100;
+}
 .Spinner {
   position: absolute;
   width: 64px;
